[gd_scene load_steps=20 format=3 uid="uid://26iu1u7m48rc"]

[ext_resource type="Script" path="res://ui/screens/titlescreen.gd" id="1_erga7"]
[ext_resource type="PackedScene" uid="uid://cdpolkwg0t10a" path="res://UI/player_ui/transition.tscn" id="2_f7fqr"]
[ext_resource type="Texture2D" uid="uid://bfvdj5dn4nveo" path="res://assets/textures/ui/title_screen/Title_Screen_StartButton.png" id="4_q4dgp"]
[ext_resource type="Texture2D" uid="uid://cy4t5mbu75gj0" path="res://assets/textures/ui/title_screen/Title_Screen_LevelButton.png" id="5_nrqhp"]
[ext_resource type="Texture2D" uid="uid://c3e5xcmm26ih" path="res://assets/textures/ui/title_screen/Title_Screen_QuitButton.png" id="6_8kpeu"]
[ext_resource type="Texture2D" uid="uid://8msffuh7hv43" path="res://assets/textures/ui/title_screen/Title_Screen_Logo.png" id="6_67a47"]
[ext_resource type="Texture2D" uid="uid://bkkd6ktc4lqsi" path="res://assets/textures/ui/title_screen/Title_Screen_background.png" id="7_gl5jf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vp2bl"]
texture = ExtResource("7_gl5jf")

[sub_resource type="Theme" id="Theme_o2eg2"]
Panel/styles/panel = SubResource("StyleBoxTexture_vp2bl")

[sub_resource type="Animation" id="Animation_55qsn"]
resource_name = "Logo"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CraftsmanSimulatorLogo:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.65, 0.65), Vector2(0.7, 0.7), Vector2(0.65, 0.65)]
}

[sub_resource type="Animation" id="Animation_4rhgq"]
resource_name = "Quit_exit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonQuit:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.22, 0.22), Vector2(0.205, 0.205)]
}

[sub_resource type="Animation" id="Animation_o3qgk"]
resource_name = "Quit_hover"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonQuit:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.205, 0.205), Vector2(0.22, 0.22)]
}

[sub_resource type="Animation" id="Animation_axmk6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CraftsmanSimulatorLogo:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.65, 0.65)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ButtonStart:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.205, 0.205)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ButtonQuit:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.205, 0.205)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../LevelSelection:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.205, 0.205)]
}

[sub_resource type="Animation" id="Animation_3k7w4"]
resource_name = "Start_hover"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonStart:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.205, 0.205), Vector2(0.22, 0.22)]
}

[sub_resource type="Animation" id="Animation_74amg"]
resource_name = "Start_quit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonStart:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.22, 0.22), Vector2(0.205, 0.205)]
}

[sub_resource type="Animation" id="Animation_23qvj"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_lq0gq"]
resource_name = "Level_exit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../LevelSelection:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.22, 0.22), Vector2(0.205, 0.205)]
}

[sub_resource type="Animation" id="Animation_mun3g"]
resource_name = "Level_hover"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../LevelSelection:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.205, 0.205), Vector2(0.22, 0.22)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_byatd"]
_data = {
"Level_exit": SubResource("Animation_lq0gq"),
"Level_hover": SubResource("Animation_mun3g"),
"Logo": SubResource("Animation_55qsn"),
"Quit_exit": SubResource("Animation_4rhgq"),
"Quit_hover": SubResource("Animation_o3qgk"),
"RESET": SubResource("Animation_axmk6"),
"Start_hover": SubResource("Animation_3k7w4"),
"Start_quit": SubResource("Animation_74amg"),
"fade_in": SubResource("Animation_23qvj")
}

[node name="Titlescreen" type="Node2D"]
script = ExtResource("1_erga7")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_o2eg2")

[node name="Transition" parent="." instance=ExtResource("2_f7fqr")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_byatd")
}

[node name="ColorRect" type="ColorRect" parent="AnimationPlayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="QuitPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_byatd")
}

[node name="ColorRect" type="ColorRect" parent="QuitPlayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="StartPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_byatd")
}

[node name="ColorRect" type="ColorRect" parent="StartPlayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="LevelPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../StartPlayer")
libraries = {
"": SubResource("AnimationLibrary_byatd")
}

[node name="ColorRect" type="ColorRect" parent="LevelPlayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="ButtonStart" type="TextureButton" parent="."]
offset_left = -11.0
offset_top = 431.0
offset_right = 1909.0
offset_bottom = 925.0
scale = Vector2(0.205, 0.205)
pivot_offset = Vector2(972.244, 257.976)
size_flags_vertical = 4
texture_normal = ExtResource("4_q4dgp")
texture_pressed = ExtResource("4_q4dgp")
texture_hover = ExtResource("4_q4dgp")
texture_disabled = ExtResource("4_q4dgp")
texture_focused = ExtResource("4_q4dgp")

[node name="LevelSelection" type="TextureButton" parent="."]
offset_left = 1.0
offset_top = 592.0
offset_right = 1921.0
offset_bottom = 1086.0
scale = Vector2(0.205, 0.205)
pivot_offset = Vector2(960, 244)
texture_normal = ExtResource("5_nrqhp")
texture_pressed = ExtResource("5_nrqhp")
texture_hover = ExtResource("5_nrqhp")
texture_disabled = ExtResource("5_nrqhp")
texture_focused = ExtResource("5_nrqhp")

[node name="ButtonQuit" type="TextureButton" parent="."]
offset_left = 19.0
offset_top = 742.0
offset_right = 1939.0
offset_bottom = 1236.0
scale = Vector2(0.205, 0.205)
pivot_offset = Vector2(936.244, 243.219)
texture_normal = ExtResource("6_8kpeu")
texture_pressed = ExtResource("6_8kpeu")
texture_hover = ExtResource("6_8kpeu")
texture_disabled = ExtResource("6_8kpeu")
texture_focused = ExtResource("6_8kpeu")

[node name="CraftsmanSimulatorLogo" type="Sprite2D" parent="."]
position = Vector2(965, 310)
scale = Vector2(0.65, 0.65)
texture = ExtResource("6_67a47")

[node name="TitleScreenBackground" type="Sprite2D" parent="."]
visible = false
position = Vector2(961, 540)
texture = ExtResource("7_gl5jf")

[connection signal="mouse_entered" from="ButtonStart" to="." method="_on_button_start_mouse_entered"]
[connection signal="mouse_exited" from="ButtonStart" to="." method="_on_button_start_mouse_exited"]
[connection signal="pressed" from="ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="mouse_entered" from="LevelSelection" to="." method="_on_level_selection_mouse_entered"]
[connection signal="mouse_exited" from="LevelSelection" to="." method="_on_level_selection_mouse_exited"]
[connection signal="pressed" from="LevelSelection" to="." method="_on_level_selection_pressed"]
[connection signal="mouse_entered" from="ButtonQuit" to="." method="_on_button_quit_mouse_entered"]
[connection signal="mouse_exited" from="ButtonQuit" to="." method="_on_button_quit_mouse_exited"]
[connection signal="pressed" from="ButtonQuit" to="." method="_on_button_quit_pressed"]
